--- a/src/WeComLoad.Open.Blazor/Pages/CustomizeApps/Index.razor.less
+++ b/src/WeComLoad.Open.Blazor/Pages/CustomizeApps/Index.razor.less
@@ -10,6 +10,10 @@
             line-height: 22px;
         }
 
+        .ant-card-head-title {
+            font-weight: bold;
+        }
+
         .tplTitle {
             font-size: 0;
 
@@ -20,6 +24,12 @@
                 line-height: 22px;
                 font-weight: bold;
             }
+        }
+    }
+
+    .authappList {
+        .ant-card-head-title {
+            font-weight: bold;
         }
     }
 
