--- a/src/WeComLoad.Open.Blazor/Pages/_Host.cshtml
+++ b/src/WeComLoad.Open.Blazor/Pages/_Host.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeComLoad.Open.Blazor</title>
+    <title>企微服务商工具</title>
     <base href="~/" />
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
