--- a/src/WeComLoad.Open/Views/CustomAppView.xaml
+++ b/src/WeComLoad.Open/Views/CustomAppView.xaml
@@ -46,7 +46,7 @@
                     <Label Margin="0, 20" HorizontalAlignment="Center" FontSize="18" Content="{Binding CorpName}"></Label>
                     <TextBox 
                   materialDesign:HintAssist.Hint="输入企业Id" TextAlignment="Center"
-                  Text="{Binding CorpId, UpdateSourceTrigger=PropertyChanged}"
+                  Text="{Binding AuditConfig.CorpId, UpdateSourceTrigger=PropertyChanged}"
                   MinWidth="300"
                   Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                   VerticalAlignment="Center">
@@ -73,19 +73,19 @@
                 <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="2">
                     <DockPanel Margin="10, 10">
                         <Label Content="应用主页：" />
-                        <Label Content="{Binding HomePage}" />
+                        <Label Content="{Binding AuditConfig.HomePage}" />
                     </DockPanel>
                     <DockPanel Margin="10, 10">
                         <Label  Content="可信域名："/>
-                        <Label Content="{Binding Domain}"/>
+                        <Label Content="{Binding AuditConfig.Domain}"/>
                     </DockPanel>
                     <DockPanel Margin="10, 10">
                         <Label  Content="IP白名单：" />
-                        <Label   Content="{Binding Ip}"/>
+                        <Label   Content="{Binding AuditConfig.WhiteIp}"/>
                     </DockPanel>
                     <DockPanel Margin="10, 10">
                         <Label  Content="回调地址：" />
-                        <Label Content="{Binding CallbackUrl}"/>
+                        <Label Content="{Binding AuditConfig.CallbackUrlComplete}"/>
                     </DockPanel>
                 </StackPanel>
                 <DockPanel Grid.ColumnSpan="2"  Grid.Row="3" LastChildFill="False" HorizontalAlignment="Center"  Margin="0, 10">
