--- a/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor
+++ b/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor
@@ -2,16 +2,34 @@
 @page "/login"
 
 <div class="main__b__0">
-	<div class="login">
-		<div class="top">
-			<div class="desc">请使用企业微信扫码</div>
-		</div>
+    <div class="login">
+        @if (IsQuickLogin)
+        {
+             <div class="top">
+                <div class="desc">当前企业身份登录</div>
+            </div>
+            <Card Style="margin-bottom: 24px;">
+                <div>
+                    <Avatar src="@corpInfo.user_logo"  Style="height: 80px; width: 80px"/>
+                    <div class="user_corp_info">@($"{corpInfo.user_name} @{corpInfo.corp_name}")</div>
+                </div>
+                 <Button Class="quick_login_btn" Type="@ButtonType.Primary" Size="large" OnClick="QuickLoginAsync">进入服务商工具</Button>
 
-		<div class="qrcode">
-			<img src="@qrCode" alt="qrcode" />
-		</div>
-		<Button Type="@ButtonType.Link" Size="large" Block OnClick="GetLoginAndShowQrCodeAsync" Disabled="@canRefresh">刷新</Button>
+                 <Button Type="@ButtonType.Link" Size="large" Block OnClick="ScanQrCodeLoginAsync" Style="margin-top: 15px">扫码登录</Button>
+            </Card>
+        }
+        else
+        {
+            <div class="top">
+                <div class="desc">请使用企业微信扫码</div>
+            </div>
 
-		<div class="desc">@loginHint</div>
-	</div>
+            <div class="qrcode">
+                <img src="@qrCode" alt="qrcode" />
+            </div>
+            <Button Type="@ButtonType.Link" Size="large" Block OnClick="GetLoginAndShowQrCodeAsync" Disabled="@canRefresh">刷新</Button>
+
+            <div class="desc">@loginHint</div>
+        }
+    </div>
 </div>
