--- a/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor.less
+++ b/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor.less
@@ -33,5 +33,15 @@
                 height: 240px; //*必需
             }
         }
+
+        .user_corp_info {
+            font-size: 19px;
+            font-weight: bold;
+            margin-top: 30px;
+        }
+
+        .quick_login_btn {
+            margin-top: 60px;
+        }
     }
 }
