--- a/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor.less
+++ b/src/WeComLoad.Open.Blazor/Pages/User/Login/Index.razor.less
@@ -20,11 +20,10 @@
                 text-align: center;
 
                 .desc {
-                    margin-top: 12px;
-                    margin-bottom: 40px;
-                    color: @text-color-secondary;
-                    font-size: 17px;
+                    margin-bottom: 20px;
+                    font-size: 18px;
                     font-weight: bold;
+                    color: @text-color-secondary;
                 }
             }
 
@@ -37,6 +36,11 @@
                     width: 240px; //*必需
                     height: 240px; //*必需
                 }
+            }
+
+            .hint {
+                font-size: 13px;
+                color: @text-color-secondary;
             }
 
             .user_corp_info {
