--- a/src/WeComLoad.Admin.Blazor/Pages/User/Login/Index.razor.less
+++ b/src/WeComLoad.Admin.Blazor/Pages/User/Login/Index.razor.less
@@ -49,3 +49,30 @@
         }
     }
 }
+
+.ant-modal-content {
+    .ant-modal-title {
+        font-weight: bold;
+    }
+
+    .ant-list-item {
+        padding: 0;
+    }
+
+    .corp-item {
+        text-align: center;
+
+        & :hover {
+            background-color: #A6B1E1;
+            font-weight: bold;
+        }
+
+        .ant-list-item-meta-title {
+            margin: 10px;
+        }
+    }
+
+    .corp-item-select {
+        background-color: #A6B1E1;
+    }
+}
