--- a/src/WeComLoad.Admin.Blazor/_Imports.razor
+++ b/src/WeComLoad.Admin.Blazor/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using WeComLoad.Admin.Blazor
 @using WeComLoad.Admin.Blazor.Layouts
+@using WeComLoad.Admin.Blazor.Utils
+@using WeComLoad.Admin.Blazor.Components.Base
