--- a/src/WeComLoad.Admin.Blazor/Pages/User/Login/Index.razor
+++ b/src/WeComLoad.Admin.Blazor/Pages/User/Login/Index.razor
@@ -18,19 +18,46 @@
 
         <Modal Title="选择已有企业"
                MaskClosable="false"
-               Visible="@modalVisible"
-               OnOk="@ModalHandleOk"
-               OnCancel="@ModalHandleCancel">
+               Visible="@selectModalVisible"
+               OnOk="@HandleSelectModalOk"
+               OnCancel="@HandleSelectModalCancel">
+            @if (corps != null && corps.Count > 0)
+            {
+                <AntList DataSource="@corps" TItem="LoginCorp">
+                    <ListItem class="@((selectedCorpId == context.CorpId ? "corp-item-select corp-item" : "corp-item"))" OnClick="()=> SelectedCorp(context.CorpId)">
+                        <ListItemMeta>
+                            <TitleTemplate>
+                                <span>@context.CorpName</span>
+                            </TitleTemplate>
+                        </ListItemMeta>
+                    </ListItem>
+                </AntList>
+            }
+            else
+            {
+                <div style="text-align:center">当前微信帐号未注册企业</div>
+            }
+        </Modal>
 
-            <AntList DataSource="@corps" TItem="LoginCorp">
-                <ListItem class="@((selectedCorpId == context.CorpId ? "corp-item-select corp-item" : "corp-item"))" OnClick="()=> SelectedCorp(context.CorpId)">
-                    <ListItemMeta >
-                        <TitleTemplate>
-                           <span>@context.CorpName</span>
-                        </TitleTemplate>
-                    </ListItemMeta>
-                </ListItem>
-            </AntList>
+        <Modal Title="输入验证码"
+               MaskClosable="false"
+               Visible="@captchaModalVisible"
+               OnOk="@HandleCaptchaModalOk"
+               OnCancel="@HandleCaptchaModalCancel">
+            <div style="justify-content: center;display:flex;align-items: center; margin-bottom: 20px;">
+                <div>请输入发送至 </div>
+                <div style="font-size:15px; font-weight: bold; ">@mobile </div>
+                <div> 的6位验证码</div>
+            </div>
+            <Input style="margin-bottom: 20px;" Placeholder="请输入验证码" @bind-Value="@captcha" />
+            @if (canReSendCaptcha)
+            {
+                <div style="color:#1890ff;" @onclick="RefreshCaptchaAsync">重新获取验证码</div>
+            }
+            else
+            {
+                <div>@(second)秒后可重新获取验证码</div>
+            }
 
         </Modal>
     </div>
